--- a/experiments/mcq.ipynb
+++ b/experiments/mcq.ipynb
@@ -14,20 +14,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting langchain_community\n",
-      "  Using cached langchain_community-0.2.5-py3-none-any.whl.metadata (2.5 kB)\n",
+      "Requirement already satisfied: langchain_community in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (0.2.5)\n",
       "Requirement already satisfied: PyYAML>=5.3 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (6.0.1)\n",
       "Requirement already satisfied: SQLAlchemy<3,>=1.4 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (2.0.31)\n",
       "Requirement already satisfied: aiohttp<4.0.0,>=3.8.3 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (3.9.5)\n",
-      "Collecting dataclasses-json<0.7,>=0.5.7 (from langchain_community)\n",
-      "  Using cached dataclasses_json-0.6.7-py3-none-any.whl.metadata (25 kB)\n",
+      "Requirement already satisfied: dataclasses-json<0.7,>=0.5.7 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (0.6.7)\n",
       "Requirement already satisfied: langchain<0.3.0,>=0.2.5 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (0.2.5)\n",
       "Requirement already satisfied: langchain-core<0.3.0,>=0.2.7 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (0.2.9)\n",
       "Requirement already satisfied: langsmith<0.2.0,>=0.1.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain_community) (0.1.81)\n",
@@ -40,10 +38,8 @@
       "Requirement already satisfied: multidict<7.0,>=4.5 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (6.0.5)\n",
       "Requirement already satisfied: yarl<2.0,>=1.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (1.9.4)\n",
       "Requirement already satisfied: async-timeout<5.0,>=4.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from aiohttp<4.0.0,>=3.8.3->langchain_community) (4.0.3)\n",
-      "Collecting marshmallow<4.0.0,>=3.18.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Using cached marshmallow-3.21.3-py3-none-any.whl.metadata (7.1 kB)\n",
-      "Collecting typing-inspect<1,>=0.4.0 (from dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Using cached typing_inspect-0.9.0-py3-none-any.whl.metadata (1.5 kB)\n",
+      "Requirement already satisfied: marshmallow<4.0.0,>=3.18.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (3.21.3)\n",
+      "Requirement already satisfied: typing-inspect<1,>=0.4.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from dataclasses-json<0.7,>=0.5.7->langchain_community) (0.9.0)\n",
       "Requirement already satisfied: langchain-text-splitters<0.3.0,>=0.2.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain<0.3.0,>=0.2.5->langchain_community) (0.2.1)\n",
       "Requirement already satisfied: pydantic<3,>=1 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain<0.3.0,>=0.2.5->langchain_community) (2.7.4)\n",
       "Requirement already satisfied: jsonpatch<2.0,>=1.33 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from langchain-core<0.3.0,>=0.2.7->langchain_community) (1.33)\n",
@@ -58,15 +54,7 @@
       "Requirement already satisfied: jsonpointer>=1.9 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from jsonpatch<2.0,>=1.33->langchain-core<0.3.0,>=0.2.7->langchain_community) (3.0.0)\n",
       "Requirement already satisfied: annotated-types>=0.4.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from pydantic<3,>=1->langchain<0.3.0,>=0.2.5->langchain_community) (0.7.0)\n",
       "Requirement already satisfied: pydantic-core==2.18.4 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from pydantic<3,>=1->langchain<0.3.0,>=0.2.5->langchain_community) (2.18.4)\n",
-      "Collecting mypy-extensions>=0.3.0 (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community)\n",
-      "  Using cached mypy_extensions-1.0.0-py3-none-any.whl.metadata (1.1 kB)\n",
-      "Using cached langchain_community-0.2.5-py3-none-any.whl (2.2 MB)\n",
-      "Using cached dataclasses_json-0.6.7-py3-none-any.whl (28 kB)\n",
-      "Using cached marshmallow-3.21.3-py3-none-any.whl (49 kB)\n",
-      "Using cached typing_inspect-0.9.0-py3-none-any.whl (8.8 kB)\n",
-      "Using cached mypy_extensions-1.0.0-py3-none-any.whl (4.7 kB)\n",
-      "Installing collected packages: mypy-extensions, marshmallow, typing-inspect, dataclasses-json, langchain_community\n",
-      "Successfully installed dataclasses-json-0.6.7 langchain_community-0.2.5 marshmallow-3.21.3 mypy-extensions-1.0.0 typing-inspect-0.9.0\n",
+      "Requirement already satisfied: mypy-extensions>=0.3.0 in g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages (from typing-inspect<1,>=0.4.0->dataclasses-json<0.7,>=0.5.7->langchain_community) (1.0.0)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -78,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,17 +84,193 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
-    "llm = ChatOpen"
+    "\n",
+    "KEY=os.getenv(\"open_api_key\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from dotenv import load_dotenv\n",
+    "\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sk-proj-yqSMgRFq5s6GQp5WZWHYT3BlbkFJiLRkbGlNL3dOIYvlu6V0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "g:\\gen ai project\\mcqgen\\env1\\lib\\site-packages\\langchain_core\\_api\\deprecation.py:139: LangChainDeprecationWarning: The class `ChatOpenAI` was deprecated in LangChain 0.0.10 and will be removed in 0.3.0. An updated version of the class exists in the langchain-openai package and should be used instead. To use it run `pip install -U langchain-openai` and import as `from langchain_openai import ChatOpenAI`.\n",
+      "  warn_deprecated(\n"
+     ]
+    }
+   ],
+   "source": [
+    "llm = ChatOpenAI(openai_api_key=KEY,model_name=\"gpt-3.5-turbo\",temperature=0.5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain.llms import OpenAI\n",
+    "from langchain.prompts import PromptTemplate\n",
+    "from langchain.chains import LLMChain\n",
+    "from langchain.chains import SequentialChain\n",
+    "from langchain.callbacks import get_openai_callback"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ChatOpenAI(client=<openai.resources.chat.completions.Completions object at 0x0000022045582E20>, async_client=<openai.resources.chat.completions.AsyncCompletions object at 0x000002204558FCA0>, temperature=0.5, openai_api_key='sk-proj-yqSMgRFq5s6GQp5WZWHYT3BlbkFJiLRkbGlNL3dOIYvlu6V0', openai_proxy='')"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "llm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "RESPONSE_JSON = {\n",
+    "    \"1\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"2\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "    \"3\": {\n",
+    "        \"mcq\": \"multiple choice question\",\n",
+    "        \"options\": {\n",
+    "            \"a\": \"choice here\",\n",
+    "            \"b\": \"choice here\",\n",
+    "            \"c\": \"choice here\",\n",
+    "            \"d\": \"choice here\",\n",
+    "        },\n",
+    "        \"correct\": \"correct answer\",\n",
+    "    },\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "TEMPLATE=\"\"\"\n",
+    "Text:{text}\n",
+    "You are an expert MCQ maker. Given the above text, it is your job to \\\n",
+    "create a quiz  of {number} multiple choice questions for {subject} students in {tone} tone. \n",
+    "Make sure the questions are not repeated and check all the questions to be conforming the text as well.\n",
+    "Make sure to format your response like  RESPONSE_JSON below  and use it as a guide. \\\n",
+    "Ensure to make {number} MCQs\n",
+    "### RESPONSE_JSON\n",
+    "{response_json}\n",
+    "\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "quiz_generation_prompt = PromptTemplate(\n",
+    "    input_variables=[\"text\", \"number\", \"subject\", \"tone\", \"response_json\"],\n",
+    "    template=TEMPLATE \n",
+    ")"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
